--- a/assets/css/lab-one.css
+++ b/assets/css/lab-one.css
@@ -1,29 +1,16 @@
-* {
-	margin: 0;
-	padding: 0;
-}
-
-
-html,
-body {
-	height: 100%;
-	min-height: 100% !important;
-}
-
 canvas {
 	position: absolute;
-    
+    top: 45%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    max-height: 100%;
+    max-width: 100%;
 }
 
-.circular {
-  
-  width: 30em;
-	height: 30em;
-	margin: 4em 
-}
 /* Set width to 600px, and center box */
 .gist {
-    padding-top: 30px;
+    padding-top: 300px;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
