--- a/assets/css/ass-one.css
+++ b/assets/css/ass-one.css
@@ -12,7 +12,12 @@ body {
 
 canvas {
 	position: absolute;
-    
+    top: 45%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .circular {
