--- a/assets/css/assign-three.css
+++ b/assets/css/assign-three.css
@@ -1,22 +1,17 @@
-html,
-body {
-	height: 100%;
-	min-height: 100% !important;
-}
-
+/* Set width to 600px, and center box */
 .gist {
     padding-top: 30px;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    width: 1000px !important;    
+    width: 600px !important;    
   }
   
 /* Limit height and width of script box, and enable scrollbars */
 .gist-data {
     height:250px;
     overflow-y: visible;
-    width: 1000px;
+    width: 600px;
     overflow-x: visible;
 }
 
