--- a/assets/css/lab-three.css
+++ b/assets/css/lab-three.css
@@ -59,7 +59,7 @@ body {
     .note {
       padding: 10px;
       width: 80%;
-      border: 1px solid #dcdde1;
+      border: 1px solid #a3b4f9;
       border-radius: 4px;
       transition: 0.2s all;
       background-color: #fff;
